--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,7 @@
 
 * {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
